Fix white edges and have a proper color for commands page (plus a new color for non-collapsed)

--- a/website/public/common.css
+++ b/website/public/common.css
@@ -147,6 +147,7 @@
 
 div#accordion div.card {
 	border-radius: 0;
+	background-color: inherit;
 }
 
 img.commandIcon {
